--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,10 @@
     }
   ],
   "description": "Bootstrap application wizard, support step by step workflow",
-  "main": "",
+  "main": [
+    "dist/bootstrap-wizard.js",
+    "dist/bootstrap-wizard.css"
+  ],
   "license": "MIT",
   "ignore": [
     "**/.*",
