--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "bootstrap-application-wizard",
   "version": "1.0.3",
   "description": "Bootstrap Application Wizard",
-  "main": "index.js",
+  "main": [
+    "dist/bootstrap-wizard.js",
+    "dist/bootstrap-wizard.css"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
